# ease-music-player

./: .gitignore  LICENSE  README.md  bun.lockb  package.json  pnpm-lock.yaml  pubspec.yaml
misty-vm/misty-async/: Cargo.toml
misty-vm/misty-async/src/: lib.rs
misty-vm/misty-vm/: Cargo.toml
misty-vm/misty-vm/src/: async_task.rs  error.rs  lib.rs  to_host.rs
misty-vm/misty-vm/src/app/: builder.rs  internal.rs  mod.rs  pod.rs
misty-vm/misty-vm/src/models/: mod.rs  model.rs  models.rs
misty-vm/misty-vm/src/utils/: mod.rs  omap.rs
misty-vm/misty-vm/src/view_models/: builder.rs  context.rs  mod.rs  pod.rs
rust-libs/: .gitignore  Cargo.toml
rust-libs/ease-client/: Cargo.toml
rust-libs/ease-client-android/: Cargo.toml
rust-libs/ease-client-android-ffi-builder/: Cargo.toml
rust-libs/ease-client-android/src/: api.rs  backend_host.rs  error.rs  inst.rs  lib.rs
rust-libs/ease-client-android/src/foreigns/: mod.rs
rust-libs/ease-client-backend/: Cargo.toml
rust-libs/ease-client-backend/migrations/: latest.db  v1_init.sql
rust-libs/ease-client-backend/src/: ctx.rs  error.rs  infra.rs  lib.rs
rust-libs/ease-client-backend/src/controllers/: asset.rs  code.rs  connector.rs  core.rs  debug.rs  mod.rs  music.rs  player.rs  playlist.rs  preference.rs  storage.rs
rust-libs/ease-client-backend/src/core/: channel.rs  handler.rs  result.rs  schema.rs
rust-libs/ease-client-backend/src/models/: key.rs  mod.rs  music.rs  playlist.rs  preference.rs  storage.rs
rust-libs/ease-client-backend/src/objects/: app.rs  generated.rs  lyric.rs  mod.rs  music.rs  music_duration.rs  player.rs  playlist.rs  storage.rs
rust-libs/ease-client-backend/src/repositories/: app.rs  bin.rs  core.rs  defs.rs  mod.rs  music.rs  playlist.rs  preference.rs  storage.rs
rust-libs/ease-client-backend/src/serve/: interface.rs
rust-libs/ease-client-backend/src/services/: mod.rs
rust-libs/ease-client-backend/src/utils/: common.rs  define_id.rs  mod.rs
rust-libs/ease-client-desktop/: Cargo.toml
rust-libs/ease-client-desktop/examples/: i.rs
rust-libs/ease-client-desktop/src/: main.rs  view_state.rs
rust-libs/ease-client-desktop/src/core/: assets.rs  mod.rs  routes.rs  theme.rs  toast.rs  view_state.rs  vm.rs
rust-libs/ease-client-desktop/src/utils/: dynamic_lifetime.rs  mod.rs
rust-libs/ease-client-desktop/src/views/: main.rs  mod.rs  playlist.rs  playlist_create.rs  playlists.rs  root.rs  routes.rs  setting.rs  sidebar.rs  storage_upsert.rs  windowbar.rs
rust-libs/ease-client-music-player/: Cargo.toml
rust-libs/ease-client-music-player/src/: lib.rs
rust-libs/ease-client-music-player/src/lyrics/: mod.rs
rust-libs/ease-client-schema/: Cargo.toml  LICENSE-GPL
rust-libs/ease-client-schema/src/: lib.rs
rust-libs/ease-client-schema/src/v2/: mod.rs  models.rs  repositories.rs  shared.rs  upgrader.rs
rust-libs/ease-client-schema/src/v3/: mod.rs  objects.rs  upgrader.rs
rust-libs/ease-client-schema/tests/: data.redb  v2_to_v3.rs
rust-libs/ease-client-shared/: Cargo.toml
rust-libs/ease-client-shared/src/: lib.rs
rust-libs/ease-client-shared/src/backends/: app.rs  code.rs  connector.rs  env.rs  lyric.rs  message.rs  mod.rs  music.rs  music_duration.rs  player.rs  playlist.rs  preference.rs  storage.rs
rust-libs/ease-client-shared/src/base/: app.rs  ids.rs  mod.rs  storage.rs
rust-libs/ease-client-shared/src/uis/: mod.rs  music.rs  playlist.rs  preference.rs  root.rs  rotuer.rs  storage.rs  to_hosts.rs  view.rs
rust-libs/ease-client-shared/src/utils/: define_id.rs  mod.rs
rust-libs/ease-client-test/: Cargo.toml
rust-libs/ease-client-test/src/: backend_host.rs  event_loop.rs  fake_permission.rs  fake_player.rs  fake_server.rs  fake_timer.rs  lib.rs  rt.rs  view_state.rs
rust-libs/ease-client-test/test-dbs/: README.md
rust-libs/ease-client-test/test-files/: README.md  angelical-pad-143276.lrc
rust-libs/ease-client-test/tests/: app.rs  music.rs  music_lyric.rs  playlist.rs  playlist_cover.rs  playlist_create.rs  router.rs  storage.rs
rust-libs/ease-client-tokio/: Cargo.toml  LICENSE-GPL
rust-libs/ease-client-tokio/src/: lib.rs
rust-libs/ease-client-ui/: Cargo.toml
rust-libs/ease-client-ui/src/: api.rs  lib.rs
rust-libs/ease-client-ui/src/modules/: mod.rs
rust-libs/ease-client/migrations/: v1_init.sql
rust-libs/ease-client/src/: api.rs  async_adapter.rs  client.rs  error.rs  lib.rs
rust-libs/ease-client/src/actions/: common.rs  event.rs  mod.rs  widget.rs
rust-libs/ease-client/src/connector/: mod.rs
rust-libs/ease-client/src/core_views/: mod.rs  models.rs  typ.rs
rust-libs/ease-client/src/modules/: error.rs  mod.rs
rust-libs/ease-client/src/to_host/: connector.rs  flush_notifier.rs  mod.rs  permission.rs  player.rs  router.rs  toast.rs  view_state.rs
rust-libs/ease-client/src/utils/: cmp_name_smartly.rs  common.rs  define_id.rs  mod.rs
rust-libs/ease-client/src/view_models/: mod.rs
rust-libs/ease-client/src/views/: music.rs  router.rs  storage.rs
rust-libs/ease-database/: Cargo.toml
rust-libs/ease-database/src/: lib.rs
rust-libs/ease-order-key/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
rust-libs/ease-order-key/src/: error.rs  ipl.rs  lib.rs
rust-libs/ease-remote-storage/: Cargo.toml
rust-libs/ease-remote-storage/src/: backend.rs  lib.rs
rust-libs/ease-remote-storage/src/impls/: local.rs  mod.rs  onedrive.rs  webdav.rs
rust-libs/misty-serve/src/core/: handler.rs  result.rs
rust-libs/misty-vm-macro/src/: async_task.rs  lib.rs  service.rs  state.rs
rust-libs/misty-vm-test/: Cargo.toml
rust-libs/misty-vm-test/src/: lib.rs
rust-libs/misty-vm-test/tests/: concurrent_controller.rs  timer.rs  todo-list.rs
rust-libs/misty-vm/src/: async_task.rs  controllers.rs  lib.rs  resources.rs  schedule.rs  services.rs  signals.rs  states.rs  views.rs
rust-libs/misty-vm/src/client/: core.rs  handle.rs  (+3 more)
rust-libs/misty/misty-serve/: Cargo.toml
rust-libs/misty/misty-vm/: Cargo.toml
rust-libs/misty/misty-vm-macro/: Cargo.toml
rust-libs/misty/misty-vm-widget/: Cargo.toml
rust-libs/misty/misty-vm-widget-test/: Cargo.toml
(+405 files in other folders)
