# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "ease-database",
    "ease-client-shared",
    "ease-remote-storage",
    "ease-client-backend",
    "ease-client",
    "ease-client-test",
    "ease-client-android-ffi-builder",
    "ease-client-android",
]

[profile.bench]
debug = true
opt-level = 3
