# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "ease-client-backend",
    "ease-client-android-ffi-builder",
    "ease-client-schema", "ease-client-tokio",
]

[profile.bench]
debug = true
opt-level = 3

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
redb = "2.2.0"
uniffi = "=0.28.3"
bitcode = "0.6.3"
postcard = { version = "1.1.3", features = ["alloc"] }
ease-client-schema = { path = "./ease-client-schema" }
ease-client-tokio = { path = "./ease-client-tokio" }
