# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "ease-client-backend",
    "ease-client-android-ffi-builder",
    "ease-client-schema",
    "ease-client-tokio",
    "ease-order-key",
]

[profile.bench]
debug = true
opt-level = 3

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
redb = "2.2.0"
uniffi = "=0.28.3"
bitcode = "0.6.3"
postcard = { version = "1.1.3", features = ["alloc"] }
futures = "0.3.30"
async-channel = "2.5.0"
ease-client-schema = { path = "./ease-client-schema" }
ease-client-tokio = { path = "./ease-client-tokio" }
ease-order-key = { path = "./ease-order-key" }
