[package]
name = "ease-client-android"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
misty-vm = { path = "../../misty-vm/misty-vm" }
ease-client = { path = "../ease-client" }
ease-client-shared = { path = "../ease-client-shared" }
ease-client-backend = { path = "../ease-client-backend" }
tracing-android = "0.2.0"
tracing-subscriber = "0.3.0"
once_cell = "1.18.0"
tracing = "0.1"
serde_bytes = "0.11.14"
uniffi = "=0.28.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
thiserror = "1.0.57"
