[package]
name = "ease-client-backend"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
misty-async = { path = "../../misty-vm/misty-async" }
ease-remote-storage = { path = "../ease-remote-storage" }
ease-database = { path = "../ease-database" }
ease-client-shared = { path = "../ease-client-shared" }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
num-traits = "0.2"
num-derive = "0.2"
bytes = "1.5.0"
thiserror = "1.0.57"
urlencoding = "2.1.3"
getset = "0.1.3"
serde_json = "1.0"
serde_bytes = "0.11.14"
futures = "0.3.30"
nom = "7"
unicode-segmentation = "1.10.1"
base64 = "0.22.1"
uniffi = "=0.28.3"
redb = "2.2.0"
lru = "0.12.5"
rmp-serde = "1.3.0"
