[package]
name = "ease-client-backend"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ease-remote-storage = { path = "../ease-remote-storage" }
once_cell = "1.18.0"
tracing = "0.1"
num-traits = "0.2"
num-derive = "0.2"
bytes = "1.5.0"
thiserror = { workspace = true }
urlencoding = "2.1.3"
getset = "0.1.3"
serde_json = "1.0"
serde_bytes = "0.11.14"
async-channel = { workspace = true }
nom = "7"
unicode-segmentation = "1.10.1"
base64 = "0.22.1"
lru = "0.12.5"
axum = { version = "0.6.20", features = ["macros"] }
flume = { version = "0.11.1" }
async-stream = "0.3.5"
futures-util = "0.3.28"
tracing-android = "0.2.0"
tracing-subscriber = "0.3.0"
serde = { workspace = true }
redb = { workspace = true }
uniffi = { workspace = true }
ease-client-schema = { workspace = true }
ease-order-key = { workspace = true }
