[package]
name = "ease-client-desktop"
version = "0.2.0"
edition = "2021"
description = ""
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
misty-async = { path = "../../misty-vm/misty-async" }
ease-client = { path = "../ease-client" }
ease-client-backend = { path = "../ease-client-backend" }
ease-client-shared = { path = "../ease-client-shared" }
tracing = "0.1"
thread_local = "1.1.7"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.30"
flume = { version = "0.11.1" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "5138e6a3c7708c703fa7b5bd945a83d82bc29987", features = [
    "test-support",
] }
winit = "0.30.4"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
