[package]
name = "ease-client-music-player"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
futures-util = "0.3.28"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
thiserror = "1.0"
tracing = "0.1"
bytes = "1.5.0"
id3 = "1.8.0"
lofty = "0.18.0"
nom = "7"
