[package]
name = "ease-client-schema"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
serde = { workspace = true }
redb = { workspace = true }
uniffi = { workspace = true }
bitcode = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
