[package]
name = "ease-client-shared"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uniffi = "=0.28.3"
num-traits = "0.2"
num-derive = "0.2"
ease-database = { path = "../ease-database" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.57"
serde_bytes = "0.11.14"
rmp-serde = "1.3.0"
