[package]
name = "ease-client-test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ease-client = { path = "../ease-client" }
misty-vm-test = { version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
dav-server = { version = "0.5.7", features = ["memfs"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
lofty = "0.15.0"
once_cell = "1.18.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
async-trait = "0.1"
