[package]
name = "ease-client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ease-remote-storage = { path = "../ease-remote-storage" }
ease-database = { path = "../ease-database" }
misty-vm = { version = "0.1.2" }
ease-client-music-player = { path = "../ease-client-music-player" }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
uniffi = "0.28.0"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
axum = { version = "0.6.20", features = ["macros"] }
tokio-util = { version = "0.7.8", features = ["io"] }
num-traits = "0.2"
num-derive = "0.2"
tracing-android = "0.2.0"
bytes = "1.5.0"
async-trait = "0.1"
thiserror = "1.0.57"
anyhow = "1.0.80"
urlencoding = "2.1.3"
unicode-segmentation = "1.10.1"
getset = "0.1.2"
serde_bytes = "0.11.14"
