[package]
name = "ease-client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ease-client-shared = { path = "../ease-client-shared" }
ease-client-backend = { path = "../ease-client-backend" }
misty-vm = { path = "../../misty-vm/misty-vm" }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
tokio-util = { version = "0.7.8", features = ["io"] }
num-traits = "0.2"
num-derive = "0.2"
tracing-android = "0.2.0"
bytes = "1.5.0"
async-trait = "0.1"
thiserror = "1.0.57"
anyhow = "1.0.80"
getset = "0.1.2"
serde_bytes = "0.11.14"
uniffi = "=0.28.0"
urlencoding = "2.1.3"
unicode-segmentation = "1.10.1"
base64 = "0.22.1"