[package]
name = "ease-client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ease-client-shared = { path = "../ease-client-shared" }
misty-vm = { path = "../../misty-vm/misty-vm" }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
num-traits = "0.2"
num-derive = "0.2"
bytes = "1.5.0"
async-trait = "0.1"
thiserror = "1.0.57"
getset = "0.1.2"
serde_bytes = "0.11.14"
uniffi = "=0.28.3"
urlencoding = "2.1.3"
unicode-segmentation = "1.10.1"
base64 = "0.22.1"
futures = "0.3.30"
