[package]
name = "ease-database"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled", "trace"] }
serde_rusqlite = "0.34.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
