[package]
name = "misty-vm-test"
version = "0.2.0"
edition = "2021"
description = "Test helpers of misty-vm."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
misty-vm = { path = "../misty-vm" }
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
futures = "0.3.30"

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = "0.3.0"
