[package]
name = "misty-vm-macro"
version = "0.2.0"
edition = "2021"
description = "Macros of misty-vm."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true
