[package]
name = "misty-vm-widget"
version = "0.2.0"
edition = "2021"
description = "A rust library for building view models."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
misty-vm = { path = "../misty-vm" }
misty-vm-macro = { path = "../misty-vm-macro" }
tracing = "0.1"
thread_local = "1.1.7"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.30"
